--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: SonarQube
 on:
   push:
     branches:
-      - main   # ajusta si tu rama principal se llama master
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore ./MiProyecto.sln
+        run: dotnet restore ./BadCleanArch.sln
 
       - name: Build
-        run: dotnet build ./MiProyecto.sln --no-incremental --configuration Release
+        run: dotnet build ./BadCleanArch.sln --no-incremental --configuration Release
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
