--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,14 @@ name: SonarQube
 on:
   push:
     branches:
-      - master   # ← Cambiado de 'main' a 'master' para que se active en tu rama actual
+      - master
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
   build:
     name: Build and analyze
-    runs-on: windows-latest
+    runs-on: ubuntu-latest   # ← CORREGIDO: SonarCloud solo funciona en Linux
 
     steps:
       - uses: actions/checkout@v4
@@ -19,10 +19,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'   # ← Ajusta si usas otra versión de .NET
+          dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore ./BadCleanArch.sln   # ← Asegúrate de que este sea el nombre real de tu solución
+        run: dotnet restore ./BadCleanArch.sln
 
       - name: Build
         run: dotnet build ./BadCleanArch.sln --no-incremental --configuration Release
@@ -35,4 +35,4 @@ jobs:
           args: >
             -Dsonar.projectKey=DianaRamirez1032_ParcialMetricas
             -Dsonar.organization=dianaramirez1032
-            -Dsonar.sourceEncoding=UTF-8   # ← Corregido: antes decía 'sonar.sonarEncoding'
+            -Dsonar.sourceEncoding=UTF-8
